[style] Add rule to prevent flickering when reloading the page

--- a/css/_general.scss
+++ b/css/_general.scss
@@ -2,6 +2,14 @@
 	box-sizing: border-box;
 }
 
+html {
+	scroll-behavior: smooth;
+
+	@media (prefers-reduced-motion: reduce) {
+		scroll-behavior: auto;
+	}
+}
+
 body {
 	margin: 0;
 	font: {
@@ -14,4 +22,8 @@ body {
 	main {
 		background-color: $black;
 	}
+}
+
+html.sr .header, .agency__title, .menu-item-104, .menu-item-105, .menu-item-279, .menu-item-106, .jarallax-img, #text_1, .introduction__logo-container, #text_2, .footer, .footer__logo, .agency__title, .services__title, .work__title, .contact__title, .title__text, .title__image, .service1__title, .service2__title, .service3__title, .service4__title, .service5__title, .service6__title, .service7__title, .service1a, #service2__item1, #service3__text1, .service4a, .contact__introduction, .service1b, #service2__item2, .service4b, .service4d, .service1c, #service2__item3, #service3__text2, .service4c, .wpcf7, #service7__item1, #service7__item2, #service7__item3, #service7__item4, #service7__item5, #service7__item6, .footer__address, .footer__contact, .footer__social, .footer__copyright {
+	visibility: hidden;
 }
